Solved 01 exercise : flex container, column as a direction and both alignement properties as center

--- a/foundations/flex/01-flex-center/style.css
+++ b/foundations/flex/01-flex-center/style.css
@@ -13,3 +13,10 @@
   width: 80px;
   height: 80px;
 }
+/* Added changes */
+.container {
+  display: flex;
+  flex-direction: column;
+  justify-content: center;
+  align-items: center;
+}
